--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: php
+
 php:
   - '5.5'
   - '5.6'
 
-script:
-    phpunit src/main.php
+matrix:
+  allow_failures:
+    - php: 5.6
+    - php: 5.5
+  fast_finish: true
+
+script: phpunit src/main.php
 
 notifications:
   slack: zrenard:K6biFPPNk6QVKm7nLuJoA1s1
